[package]
name = "collision-detection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2"
gloo-render = "0.1"
log = "0.4.6"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'CanvasRenderingContext2d'
]